--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>net.quasardb.teamcity</groupId>
   <artifactId>compression-plugin</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <properties>
       <teamcity-version>2024.07</teamcity-version>
@@ -22,6 +22,17 @@
   </pluginRepositories>
   <build>
       <plugins>
+          <plugin>
+              <groupId>org.codehaus.mojo</groupId>
+              <artifactId>versions-maven-plugin</artifactId>
+              <version>2.7</version>
+              <configuration>
+                  <generateBackupPoms>false</generateBackupPoms>
+                  <allowSnapshots>true</allowSnapshots>
+                  <allowIncrementalUpdates>true</allowIncrementalUpdates>
+                  <excludeReactor>false</excludeReactor>
+              </configuration>
+          </plugin>
           <plugin>
               <groupId>org.jetbrains.teamcity</groupId>
               <artifactId>teamcity-sdk-maven-plugin</artifactId>
