--- a/compression-plugin-server/pom.xml
+++ b/compression-plugin-server/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>compression-plugin</artifactId>
     <groupId>net.quasardb.teamcity</groupId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.6-SNAPSHOT</version>
   </parent>
   <artifactId>compression-plugin-server</artifactId>
   <packaging>jar</packaging>
@@ -13,11 +13,13 @@
       <groupId>org.jetbrains</groupId>
       <artifactId>annotations</artifactId>
       <version>16.0.1</version>
+      <scope>provided</scope>
     </dependency>
+
     <dependency>
       <groupId>net.quasardb.teamcity</groupId>
       <artifactId>compression-plugin-common</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>1.6-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
 
@@ -25,6 +27,20 @@
       <groupId>org.jetbrains.teamcity</groupId>
       <artifactId>server-api</artifactId>
       <version>${teamcity-version}</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.jetbrains.teamcity</groupId>
+      <artifactId>common-api</artifactId>
+      <version>${teamcity-version}</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.jdom</groupId>
+      <artifactId>jdom</artifactId>
+      <version>1.1.3</version>
       <scope>provided</scope>
     </dependency>
 
