--- a/compression-plugin-agent/pom.xml
+++ b/compression-plugin-agent/pom.xml
@@ -14,6 +14,7 @@
       <groupId>org.jetbrains</groupId>
       <artifactId>annotations</artifactId>
       <version>16.0.1</version>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
