--- a/compression-plugin-common/pom.xml
+++ b/compression-plugin-common/pom.xml
@@ -15,12 +15,12 @@
       <version>1.5.6-4</version>
       <scope>compile</scope>
     </dependency>
-    <dependency>
-      <groupId>org.jetbrains.teamcity.idea</groupId>
-      <artifactId>obsolete-openapi</artifactId>
-      <version>2024.07</version>
-      <scope>compile</scope>
-    </dependency>
+      <dependency>
+          <groupId>org.jetbrains.teamcity</groupId>
+          <artifactId>common-api</artifactId>
+          <version>2024.07</version>
+          <scope>provided</scope>
+      </dependency>
   </dependencies>
   <build>
     <plugins>
