--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>net.quasardb.teamcity</groupId>
   <artifactId>compression-plugin</artifactId>
-  <version>1.6-SNAPSHOT</version>
+  <version>2.0</version>
   <packaging>pom</packaging>
   <properties>
       <teamcity-version>2024.07</teamcity-version>
