--- a/compression-plugin-common/pom.xml
+++ b/compression-plugin-common/pom.xml
@@ -21,6 +21,14 @@
       <version>1.5.6-4</version>
       <scope>compile</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-compress</artifactId>
+      <version>1.27.1</version>
+      <scope>compile</scope>
+    </dependency>
+
     <dependency>
       <groupId>org.jetbrains.teamcity</groupId>
       <artifactId>common-api</artifactId>
