--- a/compression-plugin-common/pom.xml
+++ b/compression-plugin-common/pom.xml
@@ -35,6 +35,14 @@
       <version>2024.07</version>
       <scope>provided</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.jetbrains.teamcity.internal</groupId>
+      <artifactId>server</artifactId>
+      <version>${teamcity-version}</version>
+      <scope>provided</scope>
+    </dependency>
+
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
