--- a/compression-plugin-server/pom.xml
+++ b/compression-plugin-server/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>compression-plugin</artifactId>
     <groupId>net.quasardb.teamcity</groupId>
-    <version>1.3</version>
+    <version>1.4-RC</version>
   </parent>
   <artifactId>compression-plugin-server</artifactId>
   <packaging>jar</packaging>
@@ -20,7 +20,7 @@
     <dependency>
       <groupId>net.quasardb.teamcity</groupId>
       <artifactId>compression-plugin-common</artifactId>
-      <version>1.3</version>
+      <version>1.4-RC</version>
       <scope>compile</scope>
     </dependency>
 
