--- a/compression-plugin-common/pom.xml
+++ b/compression-plugin-common/pom.xml
@@ -46,7 +46,7 @@
     <dependency>
       <groupId>org.jetbrains.teamcity</groupId>
       <artifactId>common-api</artifactId>
-      <version>2024.07</version>
+      <version>${teamcity-version}</version>
       <scope>provided</scope>
     </dependency>
 
