--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
       </pluginManagement>
   </build>
   <modules>
+    <module>archive-utils</module>
     <module>compression-plugin-server</module>
     <module>compression-plugin-agent</module>
     <module>compression-plugin-common</module>
