--- a/compression-plugin-agent/pom.xml
+++ b/compression-plugin-agent/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>compression-plugin</artifactId>
     <groupId>net.quasardb.teamcity</groupId>
-    <version>1.3</version>
+    <version>1.5-RC</version>
   </parent>
   <artifactId>compression-plugin-agent</artifactId>
   <packaging>jar</packaging>
@@ -20,7 +20,7 @@
     <dependency>
       <groupId>net.quasardb.teamcity</groupId>
       <artifactId>compression-plugin-common</artifactId>
-      <version>1.3</version>
+      <version>1.5-RC</version>
       <scope>compile</scope>
     </dependency>
 
@@ -47,6 +47,19 @@
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.4</version>
+        <configuration>
+          <archive>
+            <manifest>
+              <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+            </manifest>
+          </archive>
         </configuration>
       </plugin>
     </plugins>
