Using updated plugins dependency

--- a/compression-plugin-server/pom.xml
+++ b/compression-plugin-server/pom.xml
@@ -55,9 +55,9 @@
     </dependency>
 
     <dependency>
-      <groupId>org.jetbrains.teamcity.internal</groupId>
+      <groupId>org.jetbrains.teamcity</groupId>
       <artifactId>plugins</artifactId>
-      <version>${teamcity-version}-SNAPSHOT</version>
+      <version>${teamcity-version}</version>
       <scope>provided</scope>
     </dependency>
 
