--- a/compression-plugin-server/pom.xml
+++ b/compression-plugin-server/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>compression-plugin</artifactId>
     <groupId>net.quasardb.teamcity</groupId>
-    <version>1.7.4</version>
+    <version>1.8</version>
   </parent>
   <artifactId>compression-plugin-server</artifactId>
   <packaging>jar</packaging>
@@ -20,7 +20,7 @@
     <dependency>
       <groupId>net.quasardb.teamcity</groupId>
       <artifactId>compression-plugin-common</artifactId>
-      <version>1.7.4</version>
+      <version>1.8</version>
       <scope>compile</scope>
     </dependency>
 
@@ -55,7 +55,7 @@
     </dependency>
 
     <dependency>
-      <groupId>org.jetbrains.teamcity.internal</groupId>
+      <groupId>org.jetbrains.teamcity</groupId>
       <artifactId>plugins</artifactId>
       <version>${teamcity-version}</version>
       <scope>provided</scope>
